# react-rust-go-rpc

./: .dockerignore  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  envoy.yaml  package.json  person.db  setup.sh
backend/: Cargo.toml  Dockerfile  bacon.toml  build.rs
backend/src/: main.rs  person_service.rs
backend/src/repository/: in_memory_repository.rs  mod.rs
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  buf.gen.yaml  entrypoint-dev.sh  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  grpc.ts  index.css  main.tsx  proxy.ts  utils.ts
frontend/src/components/: PersonForm.tsx  PersonList.tsx
frontend/src/components/go-connect/: GoConnect.tsx  (+4 more)
frontend/src/services/: GoPersonService.ts  PersonService.ts  RustPersonService.ts
go-connect-backend/: .dockerignore  Dockerfile  Dockerfile.dev  buf.gen.yaml  entrypoint-dev.sh  go.mod  go.sum  main.go  storage.go  utils.go
proto/: person.proto
rust-grpc-backend/: Cargo.toml  Dockerfile  Dockerfile.dev
rust-grpc-backend/.sqlx/: query-73b72c399f57e2ad922c8a4b21e6d8fb4851bfa8103cff466e1a71b2289575c5.json  query-74dc44ac0e1fba7ae558de32d93dabfb5bbe7e42131740fc66d357cf1bb8e18e.json  query-9df3e8308ce23dfea4f59564748929040b3d184d6b9104949b26c4f63acf0fd2.json  query-a34b33bea5f405d4e7c7b782a6bfd2823839e097f73914c7296f6277ae5243f4.json
rust-grpc-backend/src/: main.rs  person_service.rs  proto.rs  utils.rs
rust-grpc-backend/src/repository/: db_repository.rs  in_memory_repository.rs  mod.rs  sqlite_repository.rs
(+9 files in other folders)
