[package]
name = "person-crud-rust-grpc-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.13"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "2.0"
tower-http = { version = "0.6", features = ["cors"] }
tonic-web = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "time"] }
anyhow = "1.0.98"
dotenvy = "0.15.7"
chrono = "0.4.40"
prost-types = "0.13.5"

[build-dependencies]
tonic-build = "0.13"
